[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricket-ai-simulator"
version = "1.0.0"
description = "RL-based cricket match simulator with Q-learning and DQN agents"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "RL Cricket Game Project", email = "cricket.ai.simulator@example.com"},
]
maintainers = [
    {name = "RL Cricket Game Project", email = "cricket.ai.simulator@example.com"},
]
keywords = ["reinforcement-learning", "cricket", "simulation", "q-learning", "dqn", "ai", "sports-analytics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dqn = ["tensorflow>=2.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Animesh26526/cricket-rl-arena"
Documentation = "https://cricket-rl-arena.readthedocs.io/"
Repository = "https://github.com/Animesh26526/cricket-rl-arena"
Issues = "https://github.com/Animesh26526/cricket-rl-arena/issues"
Changelog = "https://github.com/Animesh26526/cricket-rl-arena/blob/main/CHANGELOG.md"

[project.scripts]
cricket-simulator = "main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "tensorflow.*",
    "numpy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "utils.debug_logger"
ignore_errors = true

[[tool.mypy.overrides]]
module = "main"
ignore_errors = true

[[tool.mypy.overrides]]
module = "cricket_simulator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agents.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "training.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "analysis.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "environment.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "models.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "utils.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=cricket_ai_simulator --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"